--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 </head>
 <body>
 
-<p>这是一个段落。</p>
+<p>你好</p>
+
+<a href="https://ecampus.nwpu.edu.cn/main.html#/Index">翱翔门户</a>
+<a href="https://itestcloud.unipus.cn/">itest测试平台</a>
 
 </body>
 </html>
